--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="aicp_gerrit_title">Gerrit</string>
     <string name="ae_version_title">AICP Extras version</string>
     <string name="gerrit_summary">Visit our Gerrit to know what we are working on.</string>
-    <string name="hidden_anim_activity_title">Yoga time!!!</string>
+    <string name="hidden_anim_activity_title">Kemono-Friends time!!!</string>
     <string name="hidden_anim_more_title">MORE?</string>
     <string name="hidden_anim_more_nice">NICE</string>
     <string name="continue_title">Continue</string>
